<resources>
    <string name="app_name">PesticideLib</string>
    <string name="title_all_items">Tất cả</string>
    <string name="title_saved_items">Đã lưu</string>
    <string name="title_search">Tìm kiếm</string>
    <string name="title_about">Thông tin</string>
    <!--    <string name="title_shop">Shop</string>-->
    <!--    <string name="title_gifts">Gifts</string>-->
    <!--    <string name="title_cart">Cart</string>-->
    <!--    <string name="title_profile">Profile</string>-->
    <!-- TODO: Remove or change this placeholder text -->
    <!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->


    <string name="contact_form">Contact Us</string>


    <string name="contact_form_name">Tên của bạn:</string>


    <string name="contact_form_email">Email:</string>


    <string name="contact_form_subject">Tiêu đề:</string>


    <string name="contact_form_message">Nội dung:</string>


    <string name="contact_form_button">Gửi</string>


    <string name="contact_form_post_message">Email đang được gửi đi, vui lòng đợi vài giây...</string>


    <string name="contact_posted">Gửi thành công.</string>

    <string-array name="test">
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
    </string-array>
</resources>