<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item
        android:id="@+id/navigation_all_items"
        android:icon="@drawable/ic_list_white_24dp"
        android:title="@string/title_all_items" />

    <item
        android:id="@+id/navigation_saved_items"
        android:icon="@drawable/ic_star_yellow_24dp"
        android:title="@string/title_saved_items" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:title="@string/title_about" />

</menu>